# windows-acl

./: Cargo.toml
.github/workflows/: ci.yml
src/: ace.rs  acl.rs  acl_entry.rs  acl_kind.rs  acl_list.rs  fallible_iterator.rs  lib.rs  privilege.rs  raw_acl.rs  sd.rs  security_descriptor.rs  sid.rs  tests.rs  types.rs  utils.rs  windows_security_descriptor.rs
src/tests/: mod.rs
src/types/: access_rights.rs  ace_flags.rs  ace_types.rs  mod.rs  object_types.rs  sid_types.rs
src/winapi/: api.rs  mod.rs  privilege.rs  security_descriptor.rs  sid.rs
support/: setup_acl_test.ps1
