[package]
name = "windows-acl"
version = "1.0.0"
edition = "2021"
authors = ["William Woodruff <william@trailofbits.com>", "yying <contact@trailofbits.com>"]
description = "Rust crate to simplify Windows ACL operations"
documentation = "https://trailofbits.github.io/windows-acl"
homepage = "https://trailofbits.github.io/windows-acl"
repository = "https://github.com/trailofbits/windows-acl"
readme = "README.md"
keywords = ["windows", "acl", "security", "win32"]
categories = ["os", "os::windows-apis"]
license = "MIT"

[package.metadata.release]
no-dev-version = true
disable-publish = true # handled by GitHub Actions

[lib]
name = "windows_acl"
path = "src/lib.rs"

[dependencies]
fallible-iterator = "0.3.0"
# widestring = "1.2.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
]

[dependencies.windows-strings]
version = "0.4"

# [dependencies.winapi]
# version = "0.3.5"
# features = ["aclapi", "errhandlingapi", "handleapi", "sddl", "securitybaseapi", "winbase", "winerror", "minwindef", "ntdef", "accctrl", "winnt", "processthreadsapi"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
